<resources>
    <string name="app_name">RunnerTracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history_content_description">History Floating Button</string>
    <string name="tracker_home">Tracker Home</string>
    <string name="duration">Duration</string>
    <string name="distance">Distance (m)</string>
    <string name="steps">Steps</string>
    <string name="permissin_denaied_message">Please accept our permission to continue tracking</string>
    <string name="start_counting_error_message">Sorry, canot start steps counting</string>
    <string name="no_location_text">Unkown location</string>
    <string name="notification_title">Tracking is running</string>
    <string name="open_home">Open home</string>
    <string name="trips_history">History trips</string>
    <string name="no_data_found">No data found</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="trip_details">Trip details</string>
</resources>