<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.thirdwayv.tracker.features.home.presentation.view.HomeFragment"
        android:label="@string/tracker_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_historyFragment"
            app:destination="@id/historyFragment" />
    </fragment>
    <fragment
        android:id="@+id/historyFragment"
        android:name="com.thirdwayv.tracker.features.history.presentation.view.HistoryFragment"
        android:label="@string/trips_history"
        tools:layout="@layout/fragment_history">

        <action
            android:id="@+id/action_historyFragment_to_detailsFragment"
            app:destination="@id/detailsFragment">
            <argument
                android:name="tracking_details"
                app:argType="com.thirdwayv.tracker.features.home.data.entity.TrackingTripModel" />

        </action>
    </fragment>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.thirdwayv.tracker.features.trackingdetails.presentation.view.DetailsFragment"
        android:label="@string/trip_details"
        tools:layout="@layout/fragment_details">
        <argument
            android:name="tracking_details"
            app:argType="com.thirdwayv.tracker.features.home.data.entity.TrackingTripModel" />
    </fragment>
</navigation>